--- a/ListPage.xaml
+++ b/ListPage.xaml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+             xmlns:local="clr-namespace:Turcu_Alexandru_Gabriel_Lab8"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Turcu_Alexandru_Gabriel_Lab8.ListPage"
              Title="ListPage">
     <StackLayout Margin="20">
-        <Editor Placeholder="Enter the description of the shopping list"
-                Text="{Binding Description}"
-                HeightRequest="100" />
+        <Editor Placeholder="Enter the description of the shopping list" Text="{Binding Description}" HeightRequest="50" >
+            <Editor.Behaviors>
+                <local:ValidationBehaviour />
+            </Editor.Behaviors>
+        </Editor>
+        
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -18,5 +22,13 @@
                     Text="Delete"
                     Clicked="OnDeleteButtonClicked"/>
         </Grid>
+        <ListView x:Name="listView" Margin="20">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextCell Detail="{Binding Description}" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+        <Button Text="Add/Choose Item to buy" MaximumWidthRequest="300" Clicked="OnChooseButtonClicked"/>
     </StackLayout>
 </ContentPage>
