--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -10,13 +10,21 @@
     <TabBar>
         <ShellContent
             Title="Welcome"
-            ContentTemplate="{DataTemplate local:MainPage}"/>
-        <ShellContent
-            Title="About"
-            ContentTemplate="{DataTemplate local:AboutPage}"/>
+            ContentTemplate="{DataTemplate local:MainPage}"
+            />
+
         <ShellContent
             Title="My Shopping Lists"
-            ContentTemplate="{DataTemplate local:ListEntryPage}"/>
-    </TabBar>
+            ContentTemplate="{DataTemplate local:ListEntryPage}"
+            />
+        <ShellContent
+            Title="My Shops"
+            ContentTemplate="{DataTemplate local:ShopEntryPage}"
+            />
+        <ShellContent
+            Title="About"
+            ContentTemplate="{DataTemplate local:AboutPage}"
+            />
+    </TabBar>
 
 </Shell>
