--- a/ListPage.xaml
+++ b/ListPage.xaml
@@ -10,7 +10,7 @@
                 <local:ValidationBehaviour />
             </Editor.Behaviors>
         </Editor>
-        
+        <Picker x:Name="ShopPicker" Title="Enter Shop Name"/>
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
@@ -29,6 +29,7 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <Button Text="Add/Choose Item to buy" MaximumWidthRequest="300" Clicked="OnChooseButtonClicked"/>
+        <Button Text="Add/Choose Item to buy" MaximumWidthRequest="300" Clicked="OnChooseButtonClicked"/>
+
     </StackLayout>
 </ContentPage>
